syntax = "proto3";

package com.cgi.eoss.osiris;

option java_multiple_files = true;
option java_package = "com.cgi.eoss.osiris.rpc";

service CredentialsService {
    rpc GetCredentials (GetCredentialsParams) returns (Credentials);
}

message GetCredentialsParams {
    string host = 1;
}

// See com.cgi.eoss.osiris.model.DownloaderCredentials
message Credentials {
    enum Type {
        BASIC = 0;
        X509 = 1;
        PKCS8 = 2;
    }
    Type type = 1;
    string host = 2;
    string username = 3;
    string password = 4;
    string certificatePath = 5;
    string data = 6;
}
